--- a/AND_UA651BLE/2_Sync/thingml-gen/posixmt/Makefile
+++ b/AND_UA651BLE/2_Sync/thingml-gen/posixmt/Makefile
@@ -1,8 +1,8 @@
 CC = cc
 LIBS = -lpthread -l bluetooth -l mosquitto
 CFLAGS = -O2 -w
-SRCS = BLEConnecterImpl.c BLEBloodpressureImpl.c ExitHandler.c BLENotifierImpl.c HCISocketProxyImpl.c BLEInitialiserImpl.c Main.c AND_UA651BLE_SYNC_cfg.c MQTT1.c runtime.c
-OBJS = BLEConnecterImpl.o BLEBloodpressureImpl.o ExitHandler.o BLENotifierImpl.o HCISocketProxyImpl.o BLEInitialiserImpl.o Main.o AND_UA651BLE_SYNC_cfg.o MQTT1.o runtime.o
+SRCS = ExitHandler.c BLEInitialiserImpl.c BLEConnecterImpl.c BLENotifierImpl.c Main.c BLEBloodpressureImpl.c HCISocketProxyImpl.c AND_UA651BLE_SYNC_cfg.c MQTT1.c runtime.c
+OBJS = ExitHandler.o BLEInitialiserImpl.o BLEConnecterImpl.o BLENotifierImpl.o Main.o BLEBloodpressureImpl.o HCISocketProxyImpl.o AND_UA651BLE_SYNC_cfg.o MQTT1.o runtime.o
 
 all : AND_UA651BLE_SYNC
 
